⎘Replace deprecated newInstance() invocations.